# deezquest

./: .env.sample  .gitignore  .prettierrc  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tutorial.md
anchor/: .gitignore  Anchor.toml  package.json
anchor/programs/deezquest/: Cargo.toml
anchor/programs/deezquest/src/: lib.rs
anchor/programs/deezquest/src/instructions/: mod.rs
anchor/programs/deezquest/src/instructions/admin/: create_season.rs  init.rs  mod.rs
anchor/programs/deezquest/src/instructions/player/: close_game.rs  close_match_entry.rs  create_game.rs  create_match_entry.rs  init_game.rs  mod.rs  pair_match.rs  register_season.rs
anchor/programs/deezquest/src/states/: game.rs  main.rs  match_entry.rs  mod.rs  season.rs  season_entry.rs
anchor/tests/: deezquest.ts
public/: deez_coin.json
src/adapter/: BackpackIframeAdapter.ts
src/app/: Backgrounds.tsx  BgmManager.tsx  BurnerAccountManager.tsx  BurnerWalletDemo.tsx  DependenciesContainer.tsx  ExistingMatch.tsx  ListLayout.tsx  MainMenu.tsx  MainMenuItem.tsx  Navigation.tsx  PeerConnectionManager.tsx  WalletButton.tsx  globals.css  head.tsx  layout.tsx  page.tsx
src/atoms/: anchorWalletAtom.ts  barracksAtoms.ts  burnerKeypairAtom.ts  cachedImageAtom.ts  connectionAtom.ts  connectionCommitmentAtom.ts  gameStateAtom.ts  gridContainerPosAtom.ts  heroAtom.ts  heroSkills.ts  idbAtom.ts  isBackpackAtom.ts  isXNftAtom.ts  matchAtom.ts  menuAtom.ts  metaplexAtom.ts  pathnameAtom.ts  peerAtom.ts  peerAtom.tsx  peerConnectionAtom.ts  (+5 more)
(+139 files in other folders)
