[package]
name = "deezquest"
version = "0.1.0"
description = "Play puzzle RPG in Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deezquest"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
